# bit-bridle-harness

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/workflows/: dev-loop.js
src/bit_bridle/: __init__.py  agent.py  cli.py  client.py  config.py  tools.py
