[project]
name = "bit-bridle"
version = "0.1.0"
description = "A minimal agentic coding harness for GLM-5.2 (OpenAI-compatible endpoint)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "rich>=13.7.0",
]

[project.scripts]
bridle = "bit_bridle.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bit_bridle"]
